{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 51,
  "lineage": "4b30a30e-f991-03e3-6c62-b1da720285d3",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:762293625313:loadbalancer/app/hina-cloud-project-alb/5878a39a414146f1",
            "arn_suffix": "app/hina-cloud-project-alb/5878a39a414146f1",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "hina-cloud-project-alb-560215309.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:762293625313:loadbalancer/app/hina-cloud-project-alb/5878a39a414146f1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "hina-cloud-project-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05e054279888eab6d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03e2a5040bce6f4ec"
              },
              {
                "subnet_id": "subnet-0ef75f87fdaac1038"
              }
            ],
            "subnets": [
              "subnet-03e2a5040bce6f4ec",
              "subnet-0ef75f87fdaac1038"
            ],
            "tags": {
              "Name": "hina-cloud-project-alb",
              "Project": "hina-cloud-project"
            },
            "tags_all": {
              "Name": "hina-cloud-project-alb",
              "Project": "hina-cloud-project"
            },
            "vpc_id": "vpc-02d9f41363eeac17d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:762293625313:listener/app/hina-cloud-project-alb/5878a39a414146f1/1da5e73a89d3655e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:762293625313:listener/app/hina-cloud-project-alb/5878a39a414146f1/1da5e73a89d3655e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:762293625313:loadbalancer/app/hina-cloud-project-alb/5878a39a414146f1",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.main",
            "module.security_groups.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:762293625313:listener/app/hina-cloud-project-alb/5878a39a414146f1/c32079cf77572f64",
            "certificate_arn": "arn:aws:acm:eu-north-1:762293625313:certificate/f795f553-c418-4896-97c8-4808461ec34e",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Not Found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:762293625313:listener/app/hina-cloud-project-alb/5878a39a414146f1/c32079cf77572f64",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:762293625313:loadbalancer/app/hina-cloud-project-alb/5878a39a414146f1",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_route53_zone.selected",
            "module.alb.aws_lb.main",
            "module.dns.aws_acm_certificate.app_cert",
            "module.dns.aws_acm_certificate_validation.app_cert_validation",
            "module.dns.aws_route53_record.app_cert_validation",
            "module.security_groups.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "bi_tool_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:762293625313:targetgroup/hina-cloud-project-bi-tool-tg/c104be0e86d33465",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:762293625313:listener-rule/app/hina-cloud-project-alb/5878a39a414146f1/c32079cf77572f64/1e915fa7792a7958",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "hina-bi.codelessops.site"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:762293625313:listener-rule/app/hina-cloud-project-alb/5878a39a414146f1/c32079cf77572f64/1e915fa7792a7958",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-north-1:762293625313:listener/app/hina-cloud-project-alb/5878a39a414146f1/c32079cf77572f64",
            "priority": 200,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_route53_zone.selected",
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_listener.https",
            "module.alb.aws_lb_target_group.bi_tool_tg",
            "module.dns.aws_acm_certificate.app_cert",
            "module.dns.aws_acm_certificate_validation.app_cert_validation",
            "module.dns.aws_route53_record.app_cert_validation",
            "module.security_groups.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "web_app_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:762293625313:targetgroup/hina-cloud-project-web-app-tg/2512ef25ad1fb530",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:762293625313:listener-rule/app/hina-cloud-project-alb/5878a39a414146f1/c32079cf77572f64/8d22234824870dc5",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "hina-app.codelessops.site"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:762293625313:listener-rule/app/hina-cloud-project-alb/5878a39a414146f1/c32079cf77572f64/8d22234824870dc5",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-north-1:762293625313:listener/app/hina-cloud-project-alb/5878a39a414146f1/c32079cf77572f64",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_route53_zone.selected",
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_listener.https",
            "module.alb.aws_lb_target_group.web_app_tg",
            "module.dns.aws_acm_certificate.app_cert",
            "module.dns.aws_acm_certificate_validation.app_cert_validation",
            "module.dns.aws_route53_record.app_cert_validation",
            "module.security_groups.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "bi_tool_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:762293625313:targetgroup/hina-cloud-project-bi-tool-tg/c104be0e86d33465",
            "arn_suffix": "targetgroup/hina-cloud-project-bi-tool-tg/c104be0e86d33465",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:762293625313:targetgroup/hina-cloud-project-bi-tool-tg/c104be0e86d33465",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-north-1:762293625313:loadbalancer/app/hina-cloud-project-alb/5878a39a414146f1"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "hina-cloud-project-bi-tool-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "hina-cloud-project-bi-tool-tg",
              "Project": "hina-cloud-project"
            },
            "tags_all": {
              "Name": "hina-cloud-project-bi-tool-tg",
              "Project": "hina-cloud-project"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02d9f41363eeac17d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:762293625313:targetgroup/hina-cloud-project-web-app-tg/2512ef25ad1fb530",
            "arn_suffix": "targetgroup/hina-cloud-project-web-app-tg/2512ef25ad1fb530",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:762293625313:targetgroup/hina-cloud-project-web-app-tg/2512ef25ad1fb530",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-north-1:762293625313:loadbalancer/app/hina-cloud-project-alb/5878a39a414146f1"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "hina-cloud-project-web-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "hina-cloud-project-web-app-tg",
              "Project": "hina-cloud-project"
            },
            "tags_all": {
              "Name": "hina-cloud-project-web-app-tg",
              "Project": "hina-cloud-project"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02d9f41363eeac17d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "bi_tool_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-north-1:762293625313:targetgroup/hina-cloud-project-bi-tool-tg/c104be0e86d33465-20250613085747427700000005",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:762293625313:targetgroup/hina-cloud-project-bi-tool-tg/c104be0e86d33465",
            "target_id": "i-0d747589bc7933990"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.bi_tool_tg",
            "module.ec2.aws_instance.bi_tool_instance",
            "module.rds.aws_db_instance.postgresql_db",
            "module.rds.aws_db_subnet_group.main",
            "module.security_groups.aws_iam_instance_profile.ec2_instance_profile",
            "module.security_groups.aws_iam_role.ec2_instance_role",
            "module.security_groups.aws_security_group.alb_sg",
            "module.security_groups.aws_security_group.bi_tool_sg",
            "module.security_groups.aws_security_group.rds_postgresql_sg",
            "module.security_groups.aws_security_group.web_app_sg",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "bi_tool_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b90bd9dbee69a462",
            "arn": "arn:aws:ec2:eu-north-1:762293625313:elastic-ip/eipalloc-0b90bd9dbee69a462",
            "domain": "vpc",
            "id": "eipalloc-0b90bd9dbee69a462",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-13-61-134-82.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.61.134.82",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "hina-cloud-project-bi-tool-eip",
              "Project": "hina-cloud-project"
            },
            "tags_all": {
              "Name": "hina-cloud-project-bi-tool-eip",
              "Project": "hina-cloud-project"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bi_tool_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-006b4a3ad5f56fbd6",
            "arn": "arn:aws:ec2:eu-north-1:762293625313:instance/i-0d747589bc7933990",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "hina-cloud-project-ec2-instance-profile",
            "id": "i-0d747589bc7933990",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "hina-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-063299739e1d95f66",
            "private_dns": "ip-10-0-1-76.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.76",
            "public_ip": "13.61.178.144",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0533b2b4fbe59859d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03e2a5040bce6f4ec",
            "tags": {
              "Name": "hina-cloud-project-bi-tool-instance",
              "Project": "hina-cloud-project"
            },
            "tags_all": {
              "Name": "hina-cloud-project-bi-tool-instance",
              "Project": "hina-cloud-project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-013021c26f31a2152"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "module.rds.aws_db_instance.postgresql_db",
            "module.rds.aws_db_subnet_group.main",
            "module.security_groups.aws_iam_instance_profile.ec2_instance_profile",
            "module.security_groups.aws_iam_role.ec2_instance_role",
            "module.security_groups.aws_security_group.alb_sg",
            "module.security_groups.aws_security_group.bi_tool_sg",
            "module.security_groups.aws_security_group.rds_postgresql_sg",
            "module.security_groups.aws_security_group.web_app_sg",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:762293625313:security-group/sg-05e054279888eab6d",
            "description": "Allow HTTP/HTTPS traffic to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05e054279888eab6d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "hina-cloud-project-alb-sg",
            "name_prefix": "",
            "owner_id": "762293625313",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hina-cloud-project-alb-sg",
              "Project": "hina-cloud-project"
            },
            "tags_all": {
              "Name": "hina-cloud-project-alb-sg",
              "Project": "hina-cloud-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d9f41363eeac17d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bi_tool_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:762293625313:security-group/sg-013021c26f31a2152",
            "description": "Allow HTTP (Metabase port) from ALB, SSH from specific IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-013021c26f31a2152",
            "ingress": [
              {
                "cidr_blocks": [
                  "101.53.224.48/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05e054279888eab6d"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "hina-cloud-project-bi-tool-sg",
            "name_prefix": "",
            "owner_id": "762293625313",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hina-cloud-project-bi-tool-sg",
              "Project": "hina-cloud-project"
            },
            "tags_all": {
              "Name": "hina-cloud-project-bi-tool-sg",
              "Project": "hina-cloud-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d9f41363eeac17d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.alb_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_mysql_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:762293625313:security-group/sg-025521cf407ee09f2",
            "description": "Allow MySQL access from EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-025521cf407ee09f2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-013021c26f31a2152",
                  "sg-06bb5eef76a461a17"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "hina-cloud-project-rds-mysql-sg",
            "name_prefix": "",
            "owner_id": "762293625313",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hina-cloud-project-rds-mysql-sg",
              "Project": "hina-cloud-project"
            },
            "tags_all": {
              "Name": "hina-cloud-project-rds-mysql-sg",
              "Project": "hina-cloud-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d9f41363eeac17d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.alb_sg",
            "module.security_groups.aws_security_group.bi_tool_sg",
            "module.security_groups.aws_security_group.web_app_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_postgresql_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:762293625313:security-group/sg-0b3110425a965af7d",
            "description": "Allow PostgreSQL access from EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b3110425a965af7d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-013021c26f31a2152",
                  "sg-06bb5eef76a461a17"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "hina-cloud-project-rds-postgresql-sg",
            "name_prefix": "",
            "owner_id": "762293625313",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hina-cloud-project-rds-postgresql-sg",
              "Project": "hina-cloud-project"
            },
            "tags_all": {
              "Name": "hina-cloud-project-rds-postgresql-sg",
              "Project": "hina-cloud-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d9f41363eeac17d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.alb_sg",
            "module.security_groups.aws_security_group.bi_tool_sg",
            "module.security_groups.aws_security_group.web_app_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:762293625313:security-group/sg-06bb5eef76a461a17",
            "description": "Allow HTTP from ALB, SSH from specific IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06bb5eef76a461a17",
            "ingress": [
              {
                "cidr_blocks": [
                  "101.53.224.48/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05e054279888eab6d"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "hina-cloud-project-web-app-sg",
            "name_prefix": "",
            "owner_id": "762293625313",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hina-cloud-project-web-app-sg",
              "Project": "hina-cloud-project"
            },
            "tags_all": {
              "Name": "hina-cloud-project-web-app-sg",
              "Project": "hina-cloud-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d9f41363eeac17d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.alb_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08d495897af7c3b28",
            "arn": "arn:aws:ec2:eu-north-1:762293625313:elastic-ip/eipalloc-08d495897af7c3b28",
            "association_id": "eipassoc-0315d04d964741ecf",
            "domain": "vpc",
            "id": "eipalloc-08d495897af7c3b28",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-09cf0b5df966eefea",
            "private_dns": "ip-10-0-1-34.eu-north-1.compute.internal",
            "private_ip": "10.0.1.34",
            "public_dns": "ec2-13-62-30-169.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.62.30.169",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "hina-cloud-project-nat-eip",
              "Project": "hina-cloud-project"
            },
            "tags_all": {
              "Name": "hina-cloud-project-nat-eip",
              "Project": "hina-cloud-project"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:762293625313:internet-gateway/igw-0d8000a9390bf41e9",
            "id": "igw-0d8000a9390bf41e9",
            "owner_id": "762293625313",
            "tags": {
              "Name": "hina-cloud-project-igw",
              "Project": "hina-cloud-project"
            },
            "tags_all": {
              "Name": "hina-cloud-project-igw",
              "Project": "hina-cloud-project"
            },
            "vpc_id": "vpc-02d9f41363eeac17d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08d495897af7c3b28",
            "association_id": "eipassoc-0315d04d964741ecf",
            "connectivity_type": "public",
            "id": "nat-09802bf429841a103",
            "network_interface_id": "eni-09cf0b5df966eefea",
            "private_ip": "10.0.1.34",
            "public_ip": "13.62.30.169",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03e2a5040bce6f4ec",
            "tags": {
              "Name": "hina-cloud-project-nat-gateway",
              "Project": "hina-cloud-project"
            },
            "tags_all": {
              "Name": "hina-cloud-project-nat-gateway",
              "Project": "hina-cloud-project"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway_eip",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:762293625313:route-table/rtb-0d7c74fe18b2b497b",
            "id": "rtb-0d7c74fe18b2b497b",
            "owner_id": "762293625313",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09802bf429841a103",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hina-cloud-project-private-rt-0",
              "Project": "hina-cloud-project"
            },
            "tags_all": {
              "Name": "hina-cloud-project-private-rt-0",
              "Project": "hina-cloud-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d9f41363eeac17d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway_eip",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:762293625313:route-table/rtb-07da50745b5fe8f6e",
            "id": "rtb-07da50745b5fe8f6e",
            "owner_id": "762293625313",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09802bf429841a103",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hina-cloud-project-private-rt-1",
              "Project": "hina-cloud-project"
            },
            "tags_all": {
              "Name": "hina-cloud-project-private-rt-1",
              "Project": "hina-cloud-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d9f41363eeac17d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway_eip",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:762293625313:route-table/rtb-0cc7ba010b1d49f8b",
            "id": "rtb-0cc7ba010b1d49f8b",
            "owner_id": "762293625313",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d8000a9390bf41e9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hina-cloud-project-public-rt",
              "Project": "hina-cloud-project"
            },
            "tags_all": {
              "Name": "hina-cloud-project-public-rt",
              "Project": "hina-cloud-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d9f41363eeac17d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3350bd88f2a1a20",
            "route_table_id": "rtb-0d7c74fe18b2b497b",
            "subnet_id": "subnet-051a8c23b51de1dc0"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway_eip",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079e460954337b200",
            "route_table_id": "rtb-07da50745b5fe8f6e",
            "subnet_id": "subnet-060bb50226d4f388a"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway_eip",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd59a8b0157585cf",
            "route_table_id": "rtb-0cc7ba010b1d49f8b",
            "subnet_id": "subnet-03e2a5040bce6f4ec"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05576a3b790a31da0",
            "route_table_id": "rtb-0cc7ba010b1d49f8b",
            "subnet_id": "subnet-0ef75f87fdaac1038"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:762293625313:subnet/subnet-051a8c23b51de1dc0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051a8c23b51de1dc0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "762293625313",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hina-cloud-project-private-subnet-0",
              "Project": "hina-cloud-project"
            },
            "tags_all": {
              "Name": "hina-cloud-project-private-subnet-0",
              "Project": "hina-cloud-project"
            },
            "vpc_id": "vpc-02d9f41363eeac17d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:762293625313:subnet/subnet-060bb50226d4f388a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060bb50226d4f388a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "762293625313",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hina-cloud-project-private-subnet-1",
              "Project": "hina-cloud-project"
            },
            "tags_all": {
              "Name": "hina-cloud-project-private-subnet-1",
              "Project": "hina-cloud-project"
            },
            "vpc_id": "vpc-02d9f41363eeac17d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:762293625313:subnet/subnet-03e2a5040bce6f4ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e2a5040bce6f4ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "762293625313",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hina-cloud-project-public-subnet-0",
              "Project": "hina-cloud-project"
            },
            "tags_all": {
              "Name": "hina-cloud-project-public-subnet-0",
              "Project": "hina-cloud-project"
            },
            "vpc_id": "vpc-02d9f41363eeac17d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:762293625313:subnet/subnet-0ef75f87fdaac1038",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef75f87fdaac1038",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "762293625313",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hina-cloud-project-public-subnet-1",
              "Project": "hina-cloud-project"
            },
            "tags_all": {
              "Name": "hina-cloud-project-public-subnet-1",
              "Project": "hina-cloud-project"
            },
            "vpc_id": "vpc-02d9f41363eeac17d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:762293625313:vpc/vpc-02d9f41363eeac17d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d5167b84a8271be5",
            "default_route_table_id": "rtb-0ae18cec8b4617a70",
            "default_security_group_id": "sg-0430d681a748a220b",
            "dhcp_options_id": "dopt-0120d4d50cd9916f9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02d9f41363eeac17d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ae18cec8b4617a70",
            "owner_id": "762293625313",
            "tags": {
              "Name": "hina-cloud-project-vpc",
              "Project": "hina-cloud-project"
            },
            "tags_all": {
              "Name": "hina-cloud-project-vpc",
              "Project": "hina-cloud-project"
            }
          }
        }
      ]
    }
  ]
}